fixed alignment of input form bars

--- a/static/style.css
+++ b/static/style.css
@@ -73,5 +73,5 @@ form {
 
 
 .form-actions {
-    margin-left: 80px; /* Aligns button with input fields */
+    margin-left: 90px; /* Aligns button with input fields */
 }
